# mc-simulation

./: .gitignore  LICENSE.txt  pyproject.toml  requirements.txt
monte-carlo-sim/: README.md  pyproject.toml
monte-carlo-sim/data/: all_argon.xyz  all_methane.xyz  argon_line.xyz  mixture.xyz  start.xyz
monte-carlo-sim/monte_carlo_sim/: __about__.py  __init__.py  distance.py  handle_xyz.py  parameters.toml  run.py  simulate.py  white.toml
monte-carlo-sim/tests/: test_distance.py  test_parser.py  test_simulation.py  test_xyz.py
monte_carlo_sim/: handle_xyz.py  simulate.py
tests/: __init__.py  start.xyz  test_simulation.py  test_xyz.py
