[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monte-carlo-sim"
description = 'Compute a small molecular simulation of particles interacting only via Van der Waals forces using a Monte Carlo approach.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ['Monte Carlo', 'molecular simulation', 'simulation']
authors = [
  { name = "Janik Kokot", email = "38459178+janikkokot@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "tomli"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/monte-carlo-sim#readme"
Issues = "https://github.com/unknown/monte-carlo-sim/issues"
Source = "https://github.com/unknown/monte-carlo-sim"

[project.scripts]
monte-carlo-sim = "monte_carlo_sim.run:main"


[tool.hatch.version]
path = "monte_carlo_sim/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "mypy",
  "flake8",
  "mypy",
  "flake8",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --doctest-modules --cov-report=term-missing --cov-config=pyproject.toml --cov=monte_carlo_sim --cov=tests {args}"
no-cov = "cov --no-cov {args}"
lint = "flake8 {args}"
typing = "mypy monte_carlo_sim"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "monte_carlo_sim/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
